# vulkan

./: .gitignore  README.md
lve/: CMakeLists.txt  shaders.sh
lve/include/: app.hpp  first_app.hpp  glfw_backend.hpp  instance.hpp  logger.hpp  lve_pipeline.hpp  lve_window.hpp  renderer.hpp
lve/src/: app.cpp  first_app.cpp  glfw_backend.cpp  instance.cpp  logger.cpp  lve_pipeline.cpp  lve_window.cpp  main.cpp  renderer.cpp
notes/: 01-structure.md  02-instance.md  device.txt  first_app.md  first_app.txt  pipeline.txt  pipelineconf.txt  swapchain.txt  window.md  window.txt
triangle/: CMakeLists.txt  shaders.sh
triangle/include/: first_app.hpp  lve_device.hpp  lve_pipeline.hpp  lve_swap_chain.hpp  lve_window.hpp
triangle/shaders/: simple_shader.vert
triangle/src/: first_app.cpp  lve_device.cpp  lve_pipeline.cpp  lve_swap_chain.cpp  lve_window.cpp  main.cpp
triangle2/: CMakeLists.txt
window/: CMakeLists.txt
window/include/: first_app.hpp  lve_window.hpp
window/src/: first_app.cpp  lve_window.cpp
